tests/ui/modules/issue-107649.stderr
error[E0277]: `&Dummy` doesn't implement `Debug`
   --> $DIR/issue-107649.rs:105:5
    |
105 |     dbg!(lib::Dummy);
    |     ^^^^^^^^^^^^^^^^ `&Dummy` cannot be formatted using `{:?}` because it doesn't implement `Debug`
    |
    = help: the trait `Debug` is not implemented for `&Dummy`, which is required by `&Dummy: Debug`
    = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `dbg` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
